Added chat rooms

--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -193,6 +193,9 @@
                         <a href="{% url 'accounts:profile' %}" class="btn btn-outline-secondary">
                             <i class="bi bi-person-fill me-2"></i>Мој профил
                         </a>
+                    <a href="{% url 'chat:list' %}" class="btn btn-outline-info">
+                    <i class="bi bi-chat-dots-fill me-2"></i>Влез во чет соби
+                </a>
                     </div>
                 </div>
             </div>
